# BBXX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: architecture.md  roadmap.md
examples/: CMakeLists.txt
examples/jukebox/: AudioScreen.h  CMakeLists.txt  main.cpp
examples/jukebox/assets/shaders/: seychelles.frag
examples/minimal/: CMakeLists.txt  main.cpp
examples/minimal/assets/: test.txt
examples/minimal/assets/shaders/: shaderprogram.frag  shaderprogram.vert
examples/poker/: CMakeLists.txt  PokerScreen.h  PokerState.h  main.cpp
include/BEATBOXX/: BXCTX.h
include/BEATBOXX/GLState/: ShaderProgram.h  Uniform.h
include/BEATBOXX/ScreenState/: Scene.h  Screen.h
include/bbxx/: AudioState.h  BBXX.h  FileSystemState.h  GLState.h  ImGuiState.h  InputState.h  Scene.h  ScreenState.h  ShaderProgram.h  WindowState.h  gl.h
include/beatboxx/: Uniform.h
src/: AudioState.cpp  BBXX.cpp  FileSystemState.cpp  GLState.cpp  ImGuiState.cpp  InputState.cpp  ScreenState.cpp  ShaderProgram.cpp  WindowState.cpp  main.cpp
src/bbxx/: BBXX.cpp  BBXX.h
src/beatboxx/: Screen.cpp  ShaderProgram.cpp
