cmake_minimum_required(VERSION 3.16)
project(bbxx)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")

add_subdirectory(vendored/SDL EXCLUDE_FROM_ALL)

file(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS "src/*.cpp")
add_library(bbxx ${SOURCE_FILES})

target_include_directories(bbxx PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

target_link_libraries(bbxx PUBLIC SDL3::SDL3)